# muzza

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  meson.build
docs/: ARCHITECTURE.md  AV_SYNC_ENGINE.md  DEVELOPMENT.md  FEATURES.md  USAGE.md  architecture.md  development.md  features.md  index.md  usage.md
docs/adr/: 0001-record-architecture-decisions.md  0002-track-based-nle-model.md  0003-no-same-track-overlap.md  0004-select-tool-move-behavior.md  0005-explicit-ripple-and-overwrite.md  0006-linked-av-by-default.md  0007-explicit-transitions-and-fades.md  0008-linux-wayland-first-packaging.md  0009-lavfi-generated-fixtures.md  index.md
docs/design/: timeline.md
docs/dev/: agent-guide.md  backlog.md  code-style.md  governance.md  index.md  milestones.md  project-layout.md  release-process.md  setup.md  testing.md
docs/explanation/: architecture-overview.md  av-sync-engine.md  export-pipeline.md  index.md  media-import-and-bin.md  persistence-and-file-format.md  playback-and-preview.md  project-data-model.md  roadmap.md  timeline-editing.md  ui-interaction-system.md
docs/how-to/: index.md  troubleshooting.md
docs/reference/: feature-matrix.md  index.md  keyboard-shortcuts.md
docs/tutorials/: 01-getting-started.md  index.md
scripts/: generate_test_fixtures.sh
src/: app.c  app.h  decoder.c  decoder.h  exporter.c  exporter.h  import_browser.c  import_browser.h  main.c  meson.build  path_utils.c  path_utils.h  playback_controller.c  playback_controller.h  project.c  project.h  test_exporter.c  test_muzza_core.c  test_project.c  ui.c  ui.h  ui_export_panel.c  ui_export_panel.h  ui_icons.c  ui_icons.h  ui_import_browser_panel.c  ui_import_browser_panel.h  ui_media_panel.c  ui_media_panel.h  ui_monitor_panel.c  ui_monitor_panel.h  ui_shared.c  ui_shared.h  ui_text.c  ui_text.h  ui_timeline_panel.c  ui_timeline_panel.h
subprojects/: flux
